--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,8 +16,8 @@
     <string name="login_welcome">Welcome to Miracle Note!</string>
     <string name="login_more_platform">你还可以通过以下平台登录</string>
     <string name="login_login">请登录</string>
-    <string name="login_hint_username">请输入帐号</string>
-    <string name="login_hint_password">请输入密码</string>
+    <string name="login_hint_username">用户名</string>
+    <string name="login_hint_password">密码</string>
     <string name="signin_username">用户名</string>
     <string name="signin_password">密码</string>
     <string name="signin_password_confirm">确认密码</string>
