--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,8 @@
     <string name="signin_phone">手机</string>
     <string name="signin_identify">验证码</string>
     <string name="signin_send_identify">发送验证码</string>
+    <string name="alarm_hint">添加提醒</string>
+    <string name="note_date_create">创建于:12月5日 13:51</string>
+    <string name="note_date_update">更新于:12月5日 13:54</string>
+    <string name="note_hint_link">附件</string>
 </resources>
